...
  final formKey = GlobalKey<FormState>();
  bool formValid = false;

  @override
  Widget build(BuildContext context) {
    Field field = new Field(
      altitude: '',
      fieldName: '',
      id: '',
    );

    Future save() async {
      final prefs = await SharedPreferences.getInstance();
...
      }
    }

    return Scaffold(
      appBar: AppBar(
          title: Text(
            "NEW FIELD",
            style: TextStyle(
              color: Color.fromARGB(95, 0, 0, 0),
              fontWeight: FontWeight.bold,
              fontSize: 14,
            ),
          ),
...
                  decoration: InputDecoration(
                    labelText: "Field altitude",
                  ),
                ),
              ),
              Expanded(
                key: ValueKey('addfield'),
                child: Align(
                  alignment: Alignment.bottomCenter,
                  child: ElevatedButton(
                    onPressed: () {
                      save();
                    },
...
