...
              radius: 70,
              backgroundImage: AssetImage("assets/pingu.jpg"),
            ),
            const SizedBox(
              height: 20,
            ),
            const Text("Wellcome to Agino",
                style: TextStyle(
                  fontSize: 32,
                  fontWeight: FontWeight.bold,
                  color: Color.fromARGB(255, 9, 27, 19),
                )),
            Container(
...
              child: const Text(
                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ",
                textAlign: TextAlign.center,
              ),
            ),
            ElevatedButton(
                key: Key('addfarm'),
                style: ElevatedButton.styleFrom(
                    minimumSize: const Size(351, 48),
                    primary: const Color.fromARGB(255, 44, 93, 75),
                    elevation: 3),
                onPressed: () => {context.go('/addfarm')},
                child: const Text("CREATE MY FIRST FARM"))
...
